force-app/main/default/objects/MarketingExpTable__c/MarketingExpTable__c.object-meta.xml
<CustomObject>
    <label>Marketing Exp Table</label>
    <nameField>
        <label>Marketing Exp Table</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Exp Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>