force-app/main/default/objects/MarketingExpTable__c/fields/BusinessType__c.field-meta.xml
<CustomField>
    <fullName>BusinessType__c</fullName>
    <label>BusinessType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-distributor</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>