force-app/main/default/objects/MarketingExpTable__c/fields/ESG_importance__c.field-meta.xml
<CustomField>
    <fullName>ESG_importance__c</fullName>
    <label>ESG_importance</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>