force-app/main/default/objects/MarketingExpTable__c/fields/It_has_stayed_the_same__c.field-meta.xml
<CustomField>
    <fullName>It_has_stayed_the_same__c</fullName>
    <label>It has stayed the same</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>