force-app/main/default/objects/MarketingExpTable__c/fields/It_has_worsened__c.field-meta.xml
<CustomField>
    <fullName>It_has_worsened__c</fullName>
    <label>It has worsened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>