force-app/main/default/objects/MarketingExpTable__c/fields/It_is_better__c.field-meta.xml
<CustomField>
    <fullName>It_is_better__c</fullName>
    <label>It_is_better</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>