force-app/main/default/objects/MarketingExpTable__c/fields/MarketSegment__c.field-meta.xml
<CustomField>
    <fullName>MarketSegment__c</fullName>
    <label>MarketSegment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00010</fullName>
                <label>CIS</label>
            </value>
            <value>
                <fullName>00002</fullName>
                <label>MENA</label>
            </value>
            <value>
                <fullName>00011</fullName>
                <label>Ukraine</label>
            </value>
            <value>
                <fullName>00001</fullName>
                <label>Americas</label>
            </value>
            <value>
                <fullName>00100</fullName>
                <label>Steel</label>
            </value>
            <value>
                <fullName>00006</fullName>
                <label>KLW</label>
            </value>
            <value>
                <fullName>00004</fullName>
                <label>Europe</label>
            </value>
            <value>
                <fullName>00016</fullName>
                <label>CU</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>