force-app/main/default/objects/MarketingExpTable__c/fields/No_answer__c.field-meta.xml
<CustomField>
    <fullName>No_answer__c</fullName>
    <label>No_answer</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>