force-app/main/default/objects/MarketingExpTable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ExtID__c</columns>
    <columns>Year__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>BusinessType__c</columns>
    <columns>It_has_improved__c</columns>
    <columns>It_has_stayed_the_same__c</columns>
    <columns>It_has_worsened__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>